<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/customborder"
    >


    <TextView
        android:id="@+id/TitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="@dimen/activity_margin_ten"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/taskLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="@dimen/activity_margin_ten"
        android:layout_marginLeft="@dimen/activity_margin_ten"
        android:layout_below="@id/TitleLabel"
        android:textStyle="bold"
        >
    </TextView>

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/taskLabel"
        android:layout_marginTop="@dimen/activity_margin_five"
        android:layout_marginLeft="@dimen/activity_margin_ten"
        android:hint="@string/hintTask"
        android:inputType="textShortMessage"
        >

        <requestFocus />
    </EditText>


    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/editTitle"
        android:layout_marginTop="@dimen/activity_margin_ten"
        android:layout_marginLeft="@dimen/activity_margin_ten"
        android:text="@string/complete"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chkStatus"
        android:layout_below="@id/editTitle"
        android:layout_toRightOf="@id/txtStatus"
        android:layout_alignBaseline="@id/txtStatus"
        android:layout_marginLeft="@dimen/activity_margin_ten"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/chkStatus"
        android:id="@+id/llPriority"
        android:layout_marginLeft="@dimen/activity_margin_ten"
        android:layout_marginTop="@dimen/activity_margin_ten">

    <TextView

        android:id="@+id/txtPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/priority"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <RadioGroup

        android:id="@+id/priorityGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/priority"
        android:layout_marginLeft="@dimen/activity_margin_twenty"

       >

        <RadioButton

            android:id="@+id/lowPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_low"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"


           />


        <RadioButton

            android:id="@+id/highPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_high"
            android:layout_marginLeft="@dimen/activity_margin_ten"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
           />
    </RadioGroup>

</LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/llPriority"
        android:id="@+id/llDate"
        android:layout_marginTop="@dimen/activity_margin_five"
        android:layout_marginLeft="@dimen/activity_margin_ten">

    <TextView

        android:id="@+id/lblDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TextView

        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin_ten"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
         />

    <Button

        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin_ten"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dateButton" />

</LinearLayout>

    <Button

        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/activity_margin_ten"
        android:layout_marginTop="@dimen/activity_margin_fifteen"
        android:layout_marginBottom="@dimen/activity_margin_ten"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cancel" />

    <Button

        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/activity_margin_ten"
        android:layout_marginTop="@dimen/activity_margin_fifteen"
        android:layout_marginBottom="@dimen/activity_margin_ten"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/delete" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/activity_margin_ten"
        android:layout_marginRight="@dimen/activity_margin_ten"
        android:layout_marginLeft="@dimen/activity_margin_ten"
        android:layout_marginTop="@dimen/activity_margin_fifteen"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/save" />

</RelativeLayout>